#18303 : Merge SIRH